# espnes

./: .clang-format  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/nofrendo/: CMakeLists.txt  idf_component.yml
components/nofrendo/src/: memguard.c  memguard.h  nofrendo.c  nofrendo.h  noftypes.h  vid_drv.c
components/nofrendo/src/nes/: mmclist.c  nes.c  nes_rom.c  nes_rom.h
components/nofrendo/src/platform/: audio_out.c  audio_out.h  display.c  display.h  menu.c  menu.h  osd.c  sd.c  sd.h
components/nofrendo/src/sndhrdw/: nes_apu.h
main/: CMakeLists.txt  main.c
